Remove redundant function [toURL(Pathname p)] from Pathname.